--- a/package.json
+++ b/package.json
@@ -20,5 +20,17 @@
   "bugs": {
     "url": "https://github.com/Robert-Frampton/electric-plugin-apidocs/issues"
   },
-  "homepage": "https://github.com/Robert-Frampton/electric-plugin-apidocs#readme"
+  "homepage": "https://github.com/Robert-Frampton/electric-plugin-apidocs#readme",
+  "dependencies": {
+    "github-download": "^0.5.0",
+    "gulp-data": "^1.2.1",
+    "gulp-documentation": "^3.1.0",
+    "gulp-filter": "^5.0.0",
+    "gulp-soynode": "^1.5.4",
+    "gulp-util": "^3.0.8",
+    "metal-tools-build-globals": "^2.0.1",
+    "metal-tools-soy": "^3.0.2",
+    "stream-series": "^0.1.1",
+    "through2": "^2.0.3"
+  }
 }
