--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Plugin for Electric that generates api docs.",
   "main": "index.js",
   "scripts": {
+    "build": "metal build --bundleFileName api-bundle.js",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,9 +30,12 @@
     "gulp-filter": "^5.0.0",
     "gulp-soynode": "^1.5.4",
     "gulp-util": "^3.0.8",
-    "metal-tools-build-globals": "^2.0.1",
-    "metal-tools-soy": "^3.0.2",
     "stream-series": "^0.1.1",
     "through2": "^2.0.3"
+  },
+  "devDependencies": {
+    "metal-ajax": "^2.0.3",
+    "metal-autocomplete": "^2.1.0",
+    "metal-cli": "^2.1.2"
   }
 }
