--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-filter": "^5.0.0",
     "gulp-soynode": "^1.5.4",
     "gulp-util": "^3.0.8",
+    "lodash": "^4.17.4",
     "stream-series": "^0.1.1",
     "through2": "^2.0.3"
   },
