--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Robert-Frampton/electric-plugin-apidocs#readme",
   "dependencies": {
+    "electric": "^2.0.0-alpha.10",
     "github-download": "^0.5.0",
     "gulp-data": "^1.2.1",
     "gulp-documentation": "^3.1.0",
